--- a/spring_boot_test/spring_boot_mode/pom.xml
+++ b/spring_boot_test/spring_boot_mode/pom.xml
@@ -54,6 +54,22 @@
         </dependency>
         <!--结束-->
 
+        <!--工作流 flowable 依赖开始-->
+        <dependency>
+            <groupId>org.flowable</groupId>
+            <artifactId>flowable-spring-boot-starter</artifactId>
+            <version>6.7.2</version>
+        </dependency>
+        <!--结束-->
+
+
+        <!--数据库连接依赖 开始-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+        <!--结束-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -62,6 +78,8 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+
     </dependencies>
 
     <build>
