--- a/spring_boot_test/spring_boot_mode/src/main/resources/application.properties
+++ b/spring_boot_test/spring_boot_mode/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.url= jdbc:mysql://localhost:3306/test_all?serverTimezone=UTC&n
 spring.datasource.username=root
 spring.datasource.password=l1998C12r05
 
+#reids链接
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
+spring.redis.password=lcr12345
+
 #flowable
 #关闭定时任务
 flowable.async-executor-activate=true
