--- a/spring_boot_test/spring_boot_mode/pom.xml
+++ b/spring_boot_test/spring_boot_mode/pom.xml
@@ -55,11 +55,11 @@
         <!--结束-->
 
 <!--        工作流 flowable 依赖开始-->
-        <dependency>
-            <groupId>org.flowable</groupId>
-            <artifactId>flowable-spring-boot-starter</artifactId>
-            <version>6.8.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.flowable</groupId>-->
+<!--            <artifactId>flowable-spring-boot-starter</artifactId>-->
+<!--            <version>6.8.0</version>-->
+<!--        </dependency>-->
 
         <!--数据库连接依赖 开始-->
         <dependency>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.2</version>
+            <version>1.3.0</version>
         </dependency>
         <!-- 结束-->
         <!--redis 链接依赖 开始-->
