--- a/spring_boot_test/spring_boot_mode/src/main/resources/application.yml
+++ b/spring_boot_test/spring_boot_mode/src/main/resources/application.yml
@@ -1,24 +1,24 @@
 server:
-  port: 8081
+  port: 8001
 
 #数据库连接
 spring:
   datasource:
     mode:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3306/test_all?serverTimezone=UTC&nullCatalogMeansCurrent=true
+      jdbc-url: jdbc:mysql://120.26.138.3:3308/test_all?serverTimezone=UTC&nullCatalogMeansCurrent=true
       username: root
-      password: l1998C12r05
+      password: 123456
     flowable:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3306/flowable?serverTimezone=UTC&nullCatalogMeansCurrent=true
+      jdbc-url: jdbc:mysql://120.26.138.3:3308/flowable?serverTimezone=UTC&nullCatalogMeansCurrent=true
       username: root
-      password: l1998C12r05
+      password: 123456
 #reids链接
-  redis:
-    port: 6379
-    host: 127.0.0.1
-    password: lcr12345
+#  redis:
+#    port: 6379
+#    host: 127.0.0.1
+#    password: lcr12345
 
 #flowable
 #关闭定时任务
