--- a/spring_boot_test/spring_boot_mode/pom.xml
+++ b/spring_boot_test/spring_boot_mode/pom.xml
@@ -58,10 +58,20 @@
 <!--        <dependency>-->
 <!--            <groupId>org.flowable</groupId>-->
 <!--            <artifactId>flowable-spring-boot-starter</artifactId>-->
-<!--            <version>6.8.0</version>-->
+<!--            <version>6.7.2</version>-->
 <!--        </dependency>-->
 
         <!--数据库连接依赖 开始-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.32</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
