--- a/spring_boot_test/spring_boot_mode/src/main/resources/application.yml
+++ b/spring_boot_test/spring_boot_mode/src/main/resources/application.yml
@@ -44,3 +44,8 @@ flowable:
 token:
   expiration-s: 3600
 
+picture:
+  localorcloud: localPictureSave
+  animation:
+    path: D:\picture\animation
+
