--- a/spring_boot_test/spring_boot_mode/pom.xml
+++ b/spring_boot_test/spring_boot_mode/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.7</version>
+        <!-- <version>3.2.1-SNAPSHOT</version> -->
+       <version>2.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -123,6 +124,9 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+
+
+
         <!-- 生成token-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -141,6 +145,11 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.3</version> <!-- 请使用最新稳定版本 -->
+        </dependency>
     </dependencies>
 
     <build>
@@ -168,6 +177,7 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
+
     </repositories>
     <pluginRepositories>
         <pluginRepository>
